# anestor

./: CMakeLists.txt  README.md  cartridge.c  cartridge.h  clock_rates.h  clock_waiter.c  clock_waiter.h  cpu.c  cpu.h  flag_ops.c  flag_ops.h  main.c  main.cc  nes.c  nes.h
cartridge/: cartridge.c  cartridge.h  header.c  header.h  mapper_controller.c  mapper_controller.h
cartridge/mappers/: nrom.c  nrom.h
cpu/: cpu.c  cpu.h  instructions.c  instructions.h  memory.c  memory.h
cpu/apu/: apu.h
cpu/rp2A03/: joystick.c  joystick.h  rp2A03.c  rp2A03.h
cpu/rp2A03/apu/: apu.c  apu.h
ppu/: memory.c  memory.h  nametables.c  nametables.h  ppu.c  ppu.h  registers.c  registers.h  renderer.c  renderer.h  screen.c  screen.h
ppu/memory/: memory.c  memory.h  nametables.c  nametables.h  palette_ram.c  palette_ram.h  pattern_tables.c  pattern_tables.h  sprite.c  sprite.h
ppu/memory/palette/: palette.c  palette.h  palette_ram.c  palette_ram.h
